syntax="proto3";

package book_service;
option go_package="genproto/book_service";

message Book {
  string id = 1;
  string name = 2;
  int64 count = 3;
  string author = 4;
  string published_date = 5;
  string created_at = 6;
  string updated_at = 7;
  string deleted_at = 8;
}

message CreateBookRequest {
  string name = 2;
  int64 count = 3;
  string author = 4;
  string published_date = 5;
}

message UpdateBookRequest {
  string id = 1;
  string name = 2;
  int64 count = 3;
  string author = 4;
  string published_date = 5;
}

message ListBooksRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListBooksResponse {
  int32 count = 1;
  repeated Book books = 2;
}