syntax="proto3";

package book_service;
option go_package="genproto/book_service";

message SaleBook {
  string id = 1;
  string book_id = 2;
  string user_id = 3;
}

message CreateSaleBookRequest {
  string book_id = 2;
  string user_id = 3;
}

message UpdateSaleBookRequest {
  string id = 1;
  string book_id = 2;
  string user_id = 3;
}

message ListSaleBooksRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListSaleBooksResponse {
  int32 count = 1;
  repeated SaleBook sale_books = 2;
}