syntax="proto3";

package book_service;
option go_package="genproto/book_service";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string middle_name = 4;
  string phone = 5;
  string email = 6;
}

message ByIdReq {
  string id = 1;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string middle_name = 3;
  string phone = 4;
  string email = 5;
}

message UpdateUserRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string middle_name = 4;
  string phone = 5;
  string email = 6;
}

message ListUsersRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListUsersResponse {
  int32 count = 1;
  repeated User users = 2;
}